# XSampler

./: .gitignore  CMakeLists.txt  README.md  build.sh  release.sh  test.sh
SFZ/: .xsampler_overlay.sfz  Resonant2.sfz
SFZ/Resonant2 Samples/: B_ResMap3_C-1.flac  B_ResMap3_C-2.flac  B_ResMap3_C-3.flac  B_ResMap3_C-4.flac  B_ResMap3_C-5.flac  B_ResMap3_C-6.flac  B_ResMap3_C-7.flac  B_ResMap3_C-8.flac
Source/: Arpeggiator.cpp  Arpeggiator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SfzOverride.cpp  SfzOverride.h
Tests/: Tests.cpp
